@@ -4,6 +4,7 @@ Cobbler CHANGELOG
 - Mon Sep 27 2008 - 1.2.6 (PENDING)
 - (BUGF) fix image vs system parentage problem affecting cobbler replicate
 - (BUGF) fix restart-services trigger to not restart dns unneccessarily
+- (BUGF) add missing variable newname to signature for remote copy_ functions
 
 - Fri Sep 26 2008 - 1.2.5
 - (BUGF) expose --arch for "cobbler image add"
